# hxdown

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: err.rs  main.rs
src/crawler/: ehentai.rs  mod.rs  nhentai.rs  progress.rs
src/fs/: config.rs  local.rs  mod.rs
