[package]
name = "hxdown"
version = "0.1.0"
authors = ["PineAG <pein.agail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
select = '0.5.0'
async-trait = '0.1.51'
bytes = '1.0'
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
http = '0.2.4'
regex = "1"